--- a/sample/src/main/res/layout/activity_sample.xml
+++ b/sample/src/main/res/layout/activity_sample.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom = "http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_sample"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context="com.kekstudio.dachshundtablayoutsample.SampleActivity">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
             <android.support.v7.widget.Toolbar
@@ -21,12 +23,15 @@
 
             <com.kekstudio.dachshundtablayout.DachshundTabLayout
                 android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
+                android:layout_width="300dp"
+                android:layout_gravity="center"
                 android:layout_height="wrap_content"
                 custom:ddAnimatedIndicator="dachshund"
                 custom:ddIndicatorHeight="6dp"
                 custom:ddIndicatorColor="@android:color/white"
+                android:background="#00ffff"
                 custom:ddCenterAlign="true"
+                custom:tabGravity="center"
                 custom:tabMode="scrollable"/>
 
         </android.support.design.widget.AppBarLayout>
@@ -37,4 +42,4 @@
             android:layout_height="wrap_content"
             custom:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
